# LearnOpenGL

./: .gitignore  CMakeLists.txt  Coordinate.cpp  HelloTriangle.cpp  HelloWindow.cpp  Shaders.cpp  Texture.cpp  Transformations.cpp  main.cpp
include/: common.h  shader.h
include/glad/: glad.h
include/shader/: shader.h
shader/: shader.vs  shader_f.frag
src/: glad.c
